# TaPAS

./: .gitignore  .gitlab-ci.yml  ARCHITECURE.md  Cargo.toml  README.md  coverage  degrees_of_freedom.csv  install-llvm-cov
api/: Cargo.toml
api/src/: datapointDTO.rs  datapoint_dto.rs  main.rs  summary_dto.rs
client/: package-lock.json  vite.config.ts
client/src/routes/: +layout.svelte  +page.svelte  error.svelte  stores.ts  tag.svelte
client/src/routes/compare/: +page.svelte  inputfield.svelte  summary.svelte
client/src/routes/predict/: +page.svelte
client/src/routes/query/: +page.svelte  result.svelte
client/src/routes/visual/: +page.svelte
domain/: Cargo.toml
domain/src/: analysis.rs  datapoint.rs  datastore.rs  lib.rs  linearfunction.rs  numericaldata.rs  parsedquery.rs  plotter.rs  queryresult.rs
domain/src/plotter/: categorical.rs  mod.rs  plotcolors.rs  scatterplot.rs  util.rs
domain/src/stats/: mod.rs  model_fit.rs  preprocess.rs  stats.rs  summary.rs  t_distribution.rs
persistence/: Cargo.toml
persistence/src/: datapoint_dso.rs  dbmanager.rs  lib.rs
sql/: build_tables.sql  reset_database.sql
