[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain"}
persistence = { path = "../persistence" }
chrono = "0.4.31"

[dependencies.rocket]
rocket = "0.5.0-rc.3"
features = ["json"]

